--- a/fern/docs.yml
+++ b/fern/docs.yml
@@ -1,13 +1,11 @@
 instances:
-  - url: petstore-openapi.docs.buildwithfern.com
+  - url: vdurante-awork-openapi.docs.buildwithfern.com
 
 navigation:
   - section: Get Started
     contents: 
       - page: Welcome
         path: ./docs/pages/welcome.mdx
-      - page: Concepts
-        path: ./docs/pages/concepts.mdx
       - page: SDKs
         path: ./docs/pages/sdks.mdx
         slug: sdks
@@ -16,19 +14,19 @@ navigation:
 navbar-links: 
   - type: secondary
     text: Get support
-    url: "mailto:support@buildwithfern.com"
+    url: "mailto:support@awork.com"
   - type: primary
-    text: Get a Demo
-    url: https://buildwithfern.com/contact
+    text: awork.com
+    url: https://awork.com
 
 colors:
   accentPrimary:
-    dark: "#f0c193"
-    light: "#af5f1b"
+    dark: "#ff4398"
+    light: "#ff4398"
 
 logo:
-  dark: ./docs/assets/logo-dark-mode.png
-  light: ./docs/assets/logo-light-mode.png
+  dark: ./docs/assets/logo-white.svg
+  light: ./docs/assets/logo.svg
   height: 40
 
-favicon: ./docs/assets/favicon.png
+favicon: ./docs/assets/awork_favicon.png
